# fraiseql-python

./: .dockerignore  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .trivyignore  404.html  ADVANCED_FEATURES_IMPLEMENTED.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  V2_RELEASE_DECISION_MATRIX.md  V2_RELEASE_READINESS_ASSESSMENT.md  hooks.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.cargo/: config.toml
.github/: cve-watchlist.json  dependabot.yml  security-ignore-patterns.txt
.github/ISSUE_TEMPLATE/: phase-6-enhancement.md
.github/workflows/: chaos-engineering-tests.yml  ci.yml  (+9 more)
.phases/: README.md  phase-01-schema-registration.md  phase-02-sql-generation.md  phase-03-testing.md  phase-04-finalize.md
20260110/: ARCHITECTURE_SUMMARY.md  CONTENTS_GUIDE.md  GIT_HISTORY.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  KEY_FILES.md  MANIFEST.txt  MANIFEST_FINAL.txt  PHASE_6_2_INTEGRATION_TESTING.md  PHASE_6_3_READY_FOR_START.md  PHASE_6_COMPLETE_FINAL_REPORT.md  QUICK_START.md  README.md  SESSION_COMPLETION_SUMMARY.md  SESSION_STATUS.md  START_HERE.txt  V2_0_0_RELEASE_READY.md
CHAOS_TESTING_IMPLEMENTATION/: index.html
CHAOS_TESTING_QA_REPORT/: index.html
MAINTENANCE/: index.html
VERSION_STATUS/: index.html
adrs/: index.html
alpha-limitations/: index.html
alpha-testing-guide/: index.html
api/: index.html
architecture/: index.html
ci-cd-integration/: index.html
configuration/: index.html
core/: index.html
crates/fraiseql-arrow/: Cargo.toml
crates/fraiseql-error/: Cargo.toml
crates/fraiseql-observers/: Cargo.toml
crates/fraiseql-observers/examples/: 02-postgresql-redis.toml
deployment/: index.html
deployment-checklist/: index.html
deployment-runbooks/: index.html
deployment-security/: index.html
design-quality-guide/: index.html
design-quality-performance/: index.html
design-quality-security/: index.html
designing-for-fraiseql/: index.html
docker-quickstart/: index.html
docs/: PHASE_6_MUTATION_FIELD_SELECTION.md  PHASE_6_MUTATION_FIELD_SELECTION_IMPL.md  README.md  alpha-testing-guide.md  hooks.py  index.md  requirements.txt
domain-organization/: index.html
enterprise/: index.html
examples/: index.html
faq/: index.html
features/: index.html
foundation/: index.html
fraiseql_rs/: .env.test  Cargo.toml  DB_MODULE_MIGRATION_STRATEGY.md  DB_STRATEGY_SUMMARY.txt  PHASE_4_STRATEGY.md
fraiseql_rs/benches/: connection_pool.rs  core_benchmark.rs  memory.rs  mutation_benchmark.rs  pipeline.rs  query_execution.rs  streaming.rs
fraiseql_rs/cli/: Cargo.toml
fraiseql_rs/cli/src/: main.rs
fraiseql_rs/core/: Cargo.toml
fraiseql_rs/core/src/: error.rs  lib.rs
fraiseql_rs/core/src/apq/: hasher.rs  metrics.rs  mod.rs  storage.rs
fraiseql_rs/core/src/cache/: coherency_validator.rs  mod.rs  query_result.rs  signature.rs
fraiseql_rs/core/src/config/: mod.rs
fraiseql_rs/core/src/core/: arena.rs  camel.rs  mod.rs
fraiseql_rs/core/src/db/: errors.rs  health.rs  metrics.rs  mod.rs  mutex_recovery.rs  parameter_binding.rs  pool_config.rs  pool_production.rs  query.rs  runtime.rs  transaction.rs  types.rs
fraiseql_rs/core/src/db/pool/: mod.rs  traits.rs
fraiseql_rs/core/src/graphql/: advanced_selections.rs  complexity.rs  directive_evaluator.rs  fragment_resolver.rs  fragments.rs  mod.rs  parser.rs  types.rs
fraiseql_rs/core/src/http/: mod.rs
fraiseql_rs/core/src/pipeline/: mod.rs
fraiseql_rs/core/src/query/: builder.rs  casing.rs  mod.rs  operators.rs  prepared_statement.rs  schema.rs
fraiseql_rs/core/src/security/: errors.rs  field_masking.rs  headers.rs  mod.rs  profiles.rs
fraiseql_rs/core/src/validation/: id_policy.rs  input_processor.rs  mod.rs
fraiseql_rs/py/: Cargo.toml
fraiseql_rs/py/src/: lib.rs
fraiseql_rs/py/src/ffi/: apq.rs  errors.rs  mod.rs  query.rs  schema.rs
fraiseql_rs/py/tests/: test_backward_compatibility.py  test_mixed_api.py  test_new_imports.py
fraiseql_rs/src/: camel_case.rs  json_transform.rs  lib.rs  mutations.rs  schema_registry.rs
fraiseql_rs/src/auth/: cache.rs  jwt.rs  provider.rs  py_bindings.rs
fraiseql_rs/src/cache/: mod.rs  signature.rs
fraiseql_rs/src/cascade/: mod.rs  tests.rs
fraiseql_rs/src/core/: arena.rs  camel.rs  transform.rs
fraiseql_rs/src/db/: pool.rs  query.rs  transaction.rs  types.rs  where_builder.rs
fraiseql_rs/src/graphql/: advanced_selections.rs  complexity.rs  fragments.rs  mod.rs  parser.rs  types.rs  variables.rs
fraiseql_rs/src/mutation/: entity_filter.rs  entity_processor.rs  field_filter.rs  mod.rs  parser.rs  postgres_composite.rs  response_builder.rs  test_status_only.rs  types.rs
fraiseql_rs/src/mutation/tests/: classification.rs  entity_field_filtering.rs  integration.rs  mod.rs  parsing.rs  properties.rs  response_building.rs  test_multiple_entities.rs
fraiseql_rs/src/pipeline/: builder.rs  projection.rs  unified.rs
fraiseql_rs/src/query/: composer.rs  mod.rs  schema.rs  where_builder.rs
fraiseql_rs/src/rbac/: cache.rs  directives.rs  errors.rs  field_auth.rs  hierarchy.rs  models.rs  py_bindings.rs  resolver.rs
fraiseql_rs/src/response/: builder.rs  json_transform.rs  streaming.rs
fraiseql_rs/src/security/: audit.rs  config.rs  cors.rs  csrf.rs  errors.rs  headers.rs  rate_limit.rs  validators.rs
fraiseql_rs/tests/: test_alias_transform.rs  test_new_impl.rs  test_performance.rs  test_pipeline.rs  test_schema_registry.rs  test_zero_copy.rs
getting-started/: index.html
glossary/: index.html
guides/: index.html
integrations/: index.html
linting-rules/: index.html
migration/: index.html
migration-guide/: index.html
observability/: index.html
operations/: index.html
patterns/: index.html
performance/: index.html
production/: index.html
reading-order/: index.html
recipes/: index.html
reference/: index.html
security-configuration/: index.html
specs/: index.html
tests/: test_full_pipeline.py  test_query_builder.py  test_query_caching.py
toml-reference/: index.html
troubleshooting/: index.html
tutorials/: index.html
(+788 files in other folders)
