[build-system]
build-backend = "maturin"
requires = ["maturin>=1.9,<2.0"]

[dependency-groups]
dev = [
  "build>=1.4.0",
  "docker>=7.1.0",
  "langchain>=1.2.0",
  "langchain-community>=0.4.1",
  "langchain-core>=1.2.14",
  "llama-index>=0.14.15",
  "llama-index-core>=0.14.15",
  "maturin>=1.12.0",
  "pre-commit>=4.5.0",
  "psutil>=7.2.0",
  "pyright>=1.1.408",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "asgi-lifespan>=2.1.0",
  "pytest-forked>=1.6.0",
  "testcontainers>=4.14.0",
  "twine>=6.2.0",
  "ty>=0.0.17",
  "moto[kms]>=5.1.21"
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.0",
  "mkdocs-mermaid2-plugin>=1.2.3",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-redirects>=1.2.2",
  "pymdown-extensions>=10.21",
  "sphinx>=9.1.0",
  "sphinx-autodoc-typehints>=3.6.3",
  "sphinx-rtd-theme>=3.1.0"
]

[project]
authors = [
  {name = "Lionel Hamayon", email = "lionel.hamayon@evolution-digitale.fr"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "Topic :: Database",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Typing :: Typed",
  "Operating System :: OS Independent"
]
dependencies = [
  "fastapi>=0.129.0",
  "starlette>=0.52.0",
  "graphql-core>=3.2.7",
  "psycopg[pool]>=3.3.3",
  "psycopg-pool>=3.3.0",
  "uvicorn>=0.41.0",
  "pydantic>=2.12.0",
  "pydantic-settings>=2.13.0",
  "httpx>=0.28.0",
  "pyjwt[crypto]>=2.11.0",
  "python-dateutil>=2.9.0",
  "click>=8.3.0",
  "python-dotenv>=1.2.0",
  "structlog>=25.5.0",
  "passlib[argon2]>=1.7.4",
  "aiosqlite>=0.22.1",
  "typer>=0.24.0",
  "rich>=14.0.0",
  "pyyaml>=6.0.2",
  "sqlparse>=0.5.5",
  "fraiseql-confiture>=0.5.2",
  "jinja2>=3.1.6",
  "urllib3>=2.6.0"
]
description = "GraphQL for the LLM era. Simple. Powerful. Rust-fast. Production-ready GraphQL API framework for PostgreSQL with CQRS, JSONB optimization, and type-safe mutations"
keywords = [
  "graphql",
  "postgresql",
  "api",
  "database",
  "jsonb",
  "fastapi",
  "async",
  "orm"
]
license = {text = "MIT"}
name = "fraiseql"
readme = "README.md"
requires-python = ">=3.13,<3.14"
version = "1.9.19"

[project.optional-dependencies]
all = [
  "protobuf>=5.29.0,<7.0",
  "wrapt>=1.16.0",
  "opentelemetry-api>=1.39.0",
  "opentelemetry-sdk>=1.39.0",
  "opentelemetry-instrumentation-psycopg>=0.60b1",
  "opentelemetry-exporter-otlp>=1.39.0",
  "pyjwt[crypto]>=2.11.0",
  "httpx>=0.28.0",
  "cyclonedx-python-lib>=7.0.0,<12.0",
  "packageurl-python>=0.17.0",
  "boto3>=1.38.0",
  "cryptography>=44.0.0",
  "aioboto3>=15.0.0",
  "google-cloud-kms>=3.11.0"
]
auth0 = ["pyjwt[crypto]>=2.11.0", "httpx>=0.28.0"]
aws = ["boto3>=1.38.0"]
dev = [
  "black>=26.1.0",
  "pre-commit>=4.5.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-timeout>=2.4.0",
  "faker>=40.0.0",
  "testcontainers[postgres]>=4.14.0",
  "testcontainers[vault]>=4.14.0",
  "docker>=7.1.0",
  "pytest-xdist>=3.8.0",
  "pytest-watch>=4.2.0",
  "pytest-cov>=7.0.0",
  "pytest-mock>=3.15.0",
  "pytest-benchmark>=5.2.0",
  "tox>=4.41.0",
  "ruff>=0.15.0",
  "ty>=0.0.1a6",
  "build>=1.4.0",
  "twine>=6.2.0",
  "pyyaml>=6.0.2",
  "prometheus-client>=0.24.0",
  "email-validator>=2.3.0",
  "hvac>=2.4.0",
  "moto[kms]>=5.1.21",
  "aiohttp>=3.13.0",
  "filelock>=3.24.0",
  "werkzeug>=3.1.6"
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.0",
  "mkdocs-redirects>=1.2.2",
  "pymdown-extensions>=10.21"
]
kms = ["cryptography>=44.0.0"]
kms-all = [
  "cryptography>=44.0.0",
  "httpx>=0.28.0",
  "aioboto3>=15.0.0",
  "google-cloud-kms>=3.11.0"
]
kms-aws = ["aioboto3>=15.0.0"]
kms-gcp = ["google-cloud-kms>=3.11.0"]
kms-vault = ["httpx>=0.28.0"]
sbom = ["cyclonedx-python-lib>=7.0.0,<12.0", "packageurl-python>=0.17.0"]
tracing = [
  "protobuf>=5.29.0,<7.0",
  "wrapt>=1.16.0",
  "opentelemetry-api>=1.39.0",
  "opentelemetry-sdk>=1.39.0",
  "opentelemetry-instrumentation-psycopg>=0.60b1",
  "opentelemetry-exporter-otlp>=1.39.0"
]

[project.scripts]
fraiseql = "fraiseql.cli:main"

[project.urls]
Changelog = "https://github.com/fraiseql/fraiseql/blob/main/CHANGELOG.md"
Documentation = "https://fraiseql.dev"
Homepage = "https://github.com/fraiseql/fraiseql"
Issues = "https://github.com/fraiseql/fraiseql/issues"
Repository = "https://github.com/fraiseql/fraiseql"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.maturin]
features = ["pyo3/extension-module"]
# Also include typed marker and Rust source files for sdist
include = ["LICENSE", "src/fraiseql/py.typed", "fraiseql_rs/src/**/*", "fraiseql_rs/Cargo.toml"]
manifest-path = "fraiseql_rs/Cargo.toml"
# Module name for the Rust extension (will be installed as fraiseql/_fraiseql_rs.so)
module-name = "fraiseql._fraiseql_rs"
# Python packages to include (our main package)
python-packages = ["fraiseql"]
# Include Python source code from src/
python-source = "src"

[tool.pytest.ini_options]
# Output options
addopts = [
  "--verbose",
  "--tb=short",
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
  "-ra"
]
asyncio_mode = "auto"
# Console output
console_output_style = "progress"
# Filter warnings
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
  "ignore:.*Use 'async with.*:DeprecationWarning",
  "ignore::pytest.PytestUnraisableExceptionWarning"
]
# Logging configuration
log_cli = false
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_level = "INFO"
# Comprehensive test markers
markers = [
  "unit: Unit tests (fast, isolated, no external dependencies)",
  "integration: Integration tests (database, external services)",
  "e2e: End-to-end tests (full system behavior)",
  "performance: Performance and benchmark tests",
  "security: Security-focused tests",
  "slow: Tests that take a long time to run",
  "core: Core functionality tests that must pass (Tier 1, <30s runtime)",
  "database: Tests that require database access",
  "auth: Tests that require authentication setup",
  "vault: Tests that require Vault KMS (uses testcontainer)",
  "aws: Tests that require AWS KMS (uses moto mock)",
  "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
  "blog_demo: Blog demo specific tests (blueprints)",
  "profile: Profiling and detailed metrics tests",
  "blog_simple: Blog simple example tests",
  "blog_enterprise: Blog enterprise example tests",
  "examples: Example integration tests",
  "enterprise: Enterprise-specific tests",
  "domain: Domain model tests (DDD patterns)",
  "regression: Regression tests for specific bugs and version features",
  "rust: Tests that require the Rust extension module",
  "skip_ci: Skip in CI environment",
  "turbo: Tests for TurboRouter functionality",
  "forked: Tests that require process isolation (schema registry singleton)",
  "chaos: Chaos engineering tests (resilience and failure handling)",
  "chaos_real_db: Chaos tests using real PostgreSQL backend",
  "chaos_network: Chaos tests for network failures (latency, packet loss)",
  "chaos_database: Chaos tests for database failures (deadlocks, constraints)",
  "chaos_cache: Chaos tests for cache failures (invalidation, corruption)",
  "chaos_auth: Chaos tests for authentication failures (expiration, service outages)",
  "chaos_resources: Chaos tests for resource exhaustion (memory, CPU, disk)",
  "chaos_concurrency: Chaos tests for concurrent execution (deadlocks, race conditions)",
  "chaos_validation: Chaos test validation and success criteria checks",
  "chaos_verification: Chaos infrastructure verification tests"
]
# Minimum version
minversion = "9.0"
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
# Test discovery
pythonpath = ["src"]
testpaths = ["tests", "examples"]

[tool.ruff]
exclude = ["tests", "examples", "tools", "scripts", "conftest.py", "dev", "verify_native_errors.py", "deploy/docker/entrypoint.py", ".phases"]
fix = true
line-length = 100
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
ignore = [
  # Previously ignored rules
  "D203",  # One-blank-line-before-class
  "D213",  # Multi-line-summary-second-line
  "TC006",  # Unquoted cast
  "UP035",  # typing.Type is deprecated - conflicts with pyright
  "UP006",  # Use type instead of Type - conflicts with pyright
  "PLW0603",  # Using global statement - needed for singleton pattern
  "FURB162",  # Unnecessary timezone replacement - false positive for ISO format parsing
  "FIX002",  # TODO comments are fine in development
  "N818",  # Exception naming - would require breaking changes
  "A003",  # Builtins shadowing - needed for 'list' method in repository
  # Documentation - enable for public APIs only
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in __init__
  "D415",  # First line should end with a period
  # Type annotations - strict checking enabled (except ANN401 which is too restrictive)
  # "ANN001",  # Missing type annotation for function argument - ENABLED
  # "ANN002",  # Missing type annotation for *args - ENABLED
  # "ANN003",  # Missing type annotation for **kwargs - ENABLED
  # "ANN201",  # Missing return type annotation for public function - ENABLED
  "ANN202",  # Missing return type annotation for private function - ENABLED
  "ANN204",  # Missing return type annotation for special method - ENABLED
  "ANN401",  # Dynamically typed expressions (Any) are allowed for flexible APIs
  # Too strict or pedantic
  "INP001",  # Implicit namespace package
  "PLC0415",  # Import should be at top-level (sometimes conditional imports make sense)
  "TRY003",  # Avoid specifying long messages outside exception class
  "TRY301",  # Abstract raise to inner function
  "TRY400",  # Use logging.exception instead of logging.error
  "EM101",  # Exception must not use string literal
  "EM102",  # Exception must not use f-string literal
  "FBT001",  # Boolean positional arg in function definition
  "FBT002",  # Boolean default value in function definition
  "FBT003",  # Boolean positional value in function call
  "PLR2004",  # Magic value used in comparison
  "S101",  # Use of assert detected (needed for tests)
  "BLE001",  # Do not catch blind exception
  "A002",  # Argument name shadowing builtin
  "ARG001",  # Unused function argument
  "ARG002",  # Unused method argument
  # Style preferences - these are suggestions not requirements
  "G004",  # Logging statement uses f-string - performance impact minimal
  "TRY300",  # Consider moving statement to else block - style preference
  "RET504",  # Unnecessary assignment before return - sometimes clearer
  "TRY203",  # Use raise from to specify exception cause - not always needed
  "SIM105",  # Use contextlib.suppress - style preference
  "SIM103",  # Return condition directly - sometimes less readable
  "SIM108",  # Use ternary operator - sometimes less readable
  "S324",  # MD5 hash usage - acceptable for cache keys, not cryptographic
  "ERA001",  # Commented out code - sometimes useful for reference
  "B904",  # Use raise from within except - not always appropriate
  "COM812",  # Trailing comma - conflicts with formatter
  "ARG004",  # Unused static method argument
  "ARG005",  # Unused lambda argument
  "PLR0913",  # Too many arguments to function call
  "PLR0915",  # Too many statements
  "C901",  # Function is too complex
  "PLR0912",  # Too many branches
  "PLR0911",  # Too many return statements
  "UP007",  # Use X | Y for type unions (not compatible with older Python)
  "UP045",  # Use X | None instead of Optional[X] (we support Python 3.11+)
  "UP046",  # Generic class should use type parameters (Python 3.12+ syntax)
  "UP047",  # Generic function should use type parameters (Python 3.12+ syntax)
  "N802",  # Function name should be lowercase
  "N806",  # Variable in function should be lowercase
  "SLF001",  # Private member accessed
  "PERF401",  # Use list comprehension
  "RUF012",  # Mutable class attributes should be annotated
  # Security warnings that are often false positives
  "S105",  # Possible hardcoded password
  "S106",  # Possible hardcoded password
  "S107",  # Possible hardcoded password
  "S108",  # Probable insecure usage of temp file/directory
  "S110",  # Try-except-pass without logging
  "S603",  # Subprocess without shell equals true
  "S607",  # Starting process with partial executable path
  "S608",  # Possible SQL injection (often false positive with query builders)
  # Import organization - let black/isort handle this
  "E402",  # Module level import not at top of file
  # Overly specific exception handling
  "PT011"  # pytest.raises() is too broad
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"**/*.pyi" = ["ANN401", "PYI020", "UP037", "UP007"]
"archive/**/*.py" = [
  "ALL"  # Ignore all linting rules in archived code
]
"benchmarks/**/*.py" = [
  "T201",  # Print statements OK in benchmarks
  "E501",  # Long lines OK in benchmarks
  "SIM117",  # Nested with statements OK in benchmarks
  "B007",  # Loop control variables OK in benchmarks
  "F841"  # Unused variables OK in benchmarks
]
"examples/**/*.py" = [
  "E402",  # Module level import not at top of file
  "F401",  # Unused imports OK in examples
  "F841",  # Unused variables OK in examples
  "ERA001",  # Commented-out code OK in examples
  "T201",  # Print statements OK in examples
  "S101",  # Assert OK in examples
  "PLR2004",  # Magic values OK in examples
  "S311",  # Random OK for demo purposes
  "RUF001",  # Ambiguous characters OK
  "RUF002",  # Ambiguous characters OK
  "RUF003",  # Ambiguous characters OK
  "E741",  # Ambiguous variable names OK in examples
  "B008",  # Function calls in arguments OK
  "UP032",  # f-string usage OK
  "B018",  # Useless expressions OK in examples
  "PLR0913",  # Too many arguments OK in examples
  "N802",  # Function names OK in examples
  "N806",  # Variable names OK in examples
  "ASYNC110",  # asyncio.sleep in while loop OK in examples
  "FAST002",  # FastAPI deps without Annotated OK in examples
  "FAST003",  # FastAPI deps OK in examples
  "S603",  # Subprocess OK in examples
  "S607",  # Subprocess OK in examples
  "DTZ005",  # Datetime OK in examples
  "DTZ007",  # Datetime OK in examples
  "SIM118",  # Dictionary keys OK in examples
  "C901",  # Complex functions OK in examples
  "PLR0912",  # Too many branches OK in examples
  "PLR0915",  # Too many statements OK in examples
  "PLW1508"  # Invalid env var default OK in examples
]
"fraiseql_rs/**/*.py" = [
  "ALL"  # Rust bridge code - has special requirements
]
"frameworks/**/*.py" = [
  "ALL"  # Prototype frameworks - not production code
]
"marketing/**/*.py" = [
  "ALL"  # Marketing visualizations - not production code
]
"rename_examples.py" = [
  "ALL"  # One-off utility script
]
"scripts/**/*.py" = [
  "ALL"  # Utility scripts - not production code
]
"src/fraiseql/cli/commands/*.py" = [
  "T201"  # Print statements OK in CLI commands
]
"src/fraiseql/core/query_builder.py" = [
  "ANN205"  # Staticmethod return type annotation optional
]
"src/fraiseql/core/rust_pipeline.py" = [
  "TID252"  # Relative imports necessary to avoid circular imports with bundled Rust extension
]
"src/fraiseql/core/rust_transformer.py" = [
  "TID252"  # Relative imports necessary to avoid circular imports with bundled Rust extension
]
"src/fraiseql/enterprise/**/*.py" = [
  "TD002",  # Missing author in TODO
  "TD003",  # Missing issue link in TODO
  "E501",  # Long lines acceptable in enterprise modules
  "TC001",  # Type-checking imports
  "TC002",  # Type-checking imports
  "TC003",  # Type-checking imports
  "F841",  # Unused variables (often placeholders)
  "D106",  # Missing docstring in nested class (Config classes)
  "T201",  # Print statements (for debugging)
  "B007",  # Loop control variables
  "DTZ003"  # datetime.utcnow() usage
]
"src/fraiseql/fastapi/middleware.py" = [
  "ANN001",  # FastAPI middleware signature compatibility
  "ANN201",  # FastAPI middleware return type compatibility
  "D102"  # FastAPI middleware method docstring optional
]
"src/fraiseql/resolvers/**/*.py" = [
  "ANN001",  # Example/template resolvers - type annotations optional
  "DTZ003",  # datetime.utcnow() acceptable in examples
  "TRY002"  # Generic exceptions OK in example code
]
"tests/**/*.py" = [
  "S101",  # Use of assert
  "DTZ011",  # Use of datetime.date.today() in tests is acceptable
  "PLR2004",  # Magic values are OK in tests
  "S105",  # Hardcoded passwords OK in tests
  "S106",  # Hardcoded passwords OK in tests
  "ARG001",  # Unused arguments OK in test fixtures
  "ARG002",  # Unused arguments OK in test fixtures
  "ANN001",  # Missing type annotations in test fixtures (complex types)
  "T201",  # Print statements OK in tests (debugging output)
  "D100",  # Missing module docstrings in tests
  "D101",  # Missing class docstrings in tests
  "D102",  # Missing method docstrings in tests
  "D103"  # Missing function docstrings in tests
]
"tests/types/test_json_type_support.py" = [
  "E501"  # Long JSON string in test
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 8  # Increased from default 5

[tool.setuptools_scm]
local_scheme = "node-and-date"
version_scheme = "python-simplified-semver"
