[workspace]
resolver = "2"
members = [
    "core",
    "py",
    "cli",
]

# Workspace-wide dependencies (shared versions)
[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "json", "uuid", "chrono"] }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GraphQL parsing
graphql-parser = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "6.0"
bytes = "1.5"

# Hashing and cryptography
sha2 = "0.10"
hex = "0.4"

# Random number generation (for CSRF tokens, etc.)
rand = "0.8"

# LRU Cache
lru = "0.12"

# TLS support (for PostgreSQL SSL connections)
native-tls = "0.2"
postgres-native-tls = "0.5"

# Python bindings (only for py crate)
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Testing
criterion = "0.5"

# Workspace-wide lints
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
