[[bench]]
harness = false
name = "flight_benchmarks"

[[bench]]
harness = false
name = "arrow_vs_json_serialization"

[dependencies]
# Arrow ecosystem (with CSV and Parquet support)
arrow = {version = "53", features = ["csv", "json"]}
arrow-flight = "53"
arrow-schema = "53"
# Async utilities
async-stream = "0.3"
async-trait = "0.1"
# Date/time parsing
chrono = {version = "0.4", features = ["serde"]}
# ClickHouse client (optional)
clickhouse = {version = "0.14", features = ["inserter"], optional = true}
# Concurrent data structures
dashmap = "6.1"
# FraiseQL core (for Executor and query execution)
fraiseql-core = {path = "../fraiseql-core", version = "2.0.0-alpha.2"}
futures = "0.3"
# JWT handling (for session token creation and validation)
jsonwebtoken = "9"
parquet = "53"
prost = "0.13"
# Serialization
serde = {version = "1", features = ["derive"]}
serde_json = "1"
# Error handling
thiserror = "2"
# Async runtime
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1"
# gRPC framework
tonic = "0.12"
# Logging
tracing = "0.1"
# UUID generation (used in handshake for session tokens)
uuid = {version = "1", features = ["v4"]}

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}
# Integration test dependencies
fraiseql-core = {path = "../fraiseql-core"}
fraiseql-server = {path = "../fraiseql-server", features = ["arrow"]}
sqlx = {version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"]}
tempfile = "3"
tokio-stream = "0.1"
tokio-test = "0.4"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1", features = ["v4"]}

[features]
clickhouse = ["dep:clickhouse"]
default = []

[lib]
name = "fraiseql_arrow"
path = "src/lib.rs"

[package]
authors = ["FraiseQL Contributors"]
description = "Apache Arrow Flight integration for FraiseQL"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "fraiseql-arrow"
version = "0.1.0"
