[dependencies]
axum = "0.7"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sqlx = {version = "0.8", default-features = false}
thiserror = "1"
toml = "0.8"

[lints]
workspace = true

[package]
description = "Error types for FraiseQL v2"
name = "fraiseql-error"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
