[dependencies]
arrow = {version = "53", optional = true}
# Phase 2 NATS Dependencies
async-nats = {version = "0.40", optional = true}
async-trait = "0.1"
base64 = "0.22"
bb8 = {version = "0.8", optional = true}
bb8-tiberius = {version = "0.15", optional = true}
chrono = {version = "0.4", features = ["serde"]}
clap = {version = "4.5", features = ["derive"]}
colored = "2.1"
dashmap = "5.5"
# Phase 9.3 Arrow Flight Dependencies
fraiseql-arrow = {path = "../fraiseql-arrow", version = "0.1.0", optional = true}
# Phase 9.2.B Dependencies
fraiseql-observers-macros = {path = "../fraiseql-observers-macros", version = "2.0.0-alpha.2", optional = true}
# Phase 8 Dependencies
futures = "0.3"
http = "1.1"
prometheus = {version = "0.14", optional = true}
rand = "0.8"
redis = {version = "0.25.4", features = ["aio", "connection-manager", "tokio-comp"], optional = true}
regex = "1.10"
reqwest = {version = "0.12", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10"
# sqlx with multiple database backends (features enabled conditionally)
sqlx = {version = "0.8", features = ["runtime-tokio", "uuid", "chrono"]}
tabwriter = "1.4"
thiserror = "2.0"
# Phase 3 SQL Server Dependencies (tiberius - sqlx doesn't support MSSQL)
tiberius = {version = "0.12", default-features = false, features = ["rustls", "chrono"], optional = true}
tokio = {version = "1.45", features = ["full"]}
tokio-util = {version = "0.7", features = ["compat"], optional = true}
tracing = "0.1"
uuid = {version = "1.0", features = ["v4", "serde"]}

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}
tokio-test = "0.4"

[features]
all-db = ["postgres", "mysql", "mssql"]
# Phase 9.3 Features
arrow = ["fraiseql-arrow", "dep:arrow"]
caching = ["redis"]
# Phase 8 Features (all optional for composability)
checkpoint = []
dedup = ["redis"]
# Default features (PostgreSQL for backward compatibility)
default = ["postgres"]
# Phase 9.2 Features
macros = ["fraiseql-observers-macros"]
metrics = ["prometheus"]
# SQL Server uses tiberius crate (sqlx doesn't support MSSQL in v0.8)
mssql = ["tiberius", "tokio-util", "bb8", "bb8-tiberius"]
# Phase 3 Multi-Database Features
multi-db = ["postgres", "mysql"]
mysql = ["sqlx/mysql"]
# Phase 2 NATS Features
nats = ["async-nats"]
phase8 = ["checkpoint", "dedup", "caching", "queue", "search", "metrics"]
phase9 = ["macros", "arrow"]
# Database backends (enable sqlx features)
postgres = ["sqlx/postgres"]
queue = ["redis"]
search = []
sqlite = ["sqlx/sqlite"]
testing = []

[lints]
workspace = true

[package]
description = "Observer system for reactive business logic in FraiseQL v2"
name = "fraiseql-observers"
authors.workspace = true
categories.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
