[package]
name = "fraiseql_cli"
version = "2.0.0"
edition = "2021"
authors = ["FraiseQL Contributors"]
description = "FraiseQL standalone GraphQL server"
license = "MIT"

[[bin]]
name = "fraiseql-server"
path = "src/main.rs"

[dependencies]
# Core library (pure Rust)
fraiseql_core = { path = "../core" }

# CLI parsing
clap.workspace = true

# Async runtime
tokio.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
dotenvy = "0.15"

[lints]
workspace = true
