[package]
name = "fraiseql_core"
version = "2.0.0"
edition = "2021"
authors = ["FraiseQL Contributors"]
description = "FraiseQL GraphQL engine - pure Rust core"
license = "MIT"
readme = "README.md"

# IMPORTANT: No pyo3, no wasm-bindgen, no FFI dependencies!

[dependencies]
# From workspace
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
sqlx.workspace = true
deadpool-postgres.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
graphql-parser.workspace = true
uuid.workspace = true
chrono.workspace = true
lazy_static.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
bytes.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
lru.workspace = true
native-tls.workspace = true
postgres-native-tls.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio-test = "0.4"

[lints]
workspace = true
