[package]
name = "fraiseql_py"
version = "2.0.0"
edition = "2021"
authors = ["FraiseQL Contributors"]
description = "FraiseQL Python bindings via PyO3"
license = "MIT"

[lib]
name = "_fraiseql_rs"
crate-type = ["cdylib"]

[dependencies]
# Core library (pure Rust)
fraiseql_core = { path = "../core" }

# Python bindings
pyo3.workspace = true
pyo3-async-runtimes.workspace = true

# Serialization (for converting between Python and Rust)
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

[lints]
workspace = true
